Fixed bug in alignment of cells inside calendar

--- a/tmg/style.scss
+++ b/tmg/style.scss
@@ -34,6 +34,7 @@ $hoverColor:#D1BDD8;
 }
 .days{
   position: relative;
+  text-align: left;
 }
 .days a{
   position:relative;
@@ -130,18 +131,18 @@ $hoverColor:#D1BDD8;
 
 
 //SITE 
-
+$contentWidth: 60%;
 body{
   background:$highlightColor;
   text-align: center;
-  padding-top: 50px;
+  padding-top: 0px;
   color:#FFF;
   font:10pt 'Lato', sans-serif;
 }
 .intro{
   font-size: 12pt;
   color:#FFF;
-  width:45%;
+  width:$contentWidth;
   margin: 0 auto;
   padding:20px;
   h1{
@@ -155,14 +156,14 @@ body{
 .assessment{
   border-top:1px solid rgba(255,255,255,0.1);
   border-bottom:1px solid rgba(255,255,255,0.1);
-    width:45%;
+    width:$contentWidth;
   margin: 0px auto;
   padding:20px 0;
 }
 .outro{
   font-size: 12pt;
   color:#FFF;
-  width:45%;
+  width:$contentWidth;
   margin: 0 auto;
   padding:20px;
   padding-bottom: 80px;
